# Bitcoin_explorer

./: LICENSE  README.md  asset-manifest.json  docker-compose.yml  index.html  package-lock.json  package.json
.github/workflows/: ci-cd.yml
api/: Dockerfile  Procfile  index.js  package-lock.json  package.json
bitcoin_ingestion/: Cargo.toml  Dockerfile  main.py
bitcoin_ingestion/src/: main.rs
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: BlockHeight.tsx  HashRate.tsx  HistoricalBlockHeights.tsx  HistoricalHashRates.tsx  HistoricalTransactionCounts.tsx  MarketPrice.tsx  TransactionCount.tsx
static/js/: 2.086edd0a.chunk.js  2.086edd0a.chunk.js.map  2.2bc2383f.chunk.js  2.2bc2383f.chunk.js.map  2.8dd6c628.chunk.js  2.8dd6c628.chunk.js.map  3.b374c852.chunk.js  3.b374c852.chunk.js.map  main.083e1719.chunk.js  main.083e1719.chunk.js.map  main.9f98e06c.chunk.js  main.9f98e06c.chunk.js.map  main.cda5bec2.chunk.js  main.cda5bec2.chunk.js.map  main.d8ef672e.chunk.js  main.d8ef672e.chunk.js.map  runtime-main.c1da2c85.js  runtime-main.c1da2c85.js.map  runtime-main.c34ec40e.js  runtime-main.c34ec40e.js.map
