[package]
name = "bitcoin_ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
tokio = { version = "1", features = ["full"] }
bigdecimal = "0.3"
bytes = "1.1"